tests/baselines/reference/jsFileCompilationBindDeepExportsAssignment.errors.txt
a.js(1,9): error TS2339: Property 'a' does not exist on type 'typeof import("a")'.


==== a.js (1 errors) ====
    exports.a.b.c = 0;
            ~
!!! error TS2339: Property 'a' does not exist on type 'typeof import("a")'.
    